unpackaged/main/default/objects/Lead/fields/Referral_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Referral_Authorization__c</fullName>
    <label>Referral Authorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>