unpackaged/main/default/objects/Lead/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used for Refer a Friend (RAF) project, so we know who referred the lead</description>
    <inlineHelpText>Who referred this lead?</inlineHelpText>
    <label>Referred By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referred Leads</relationshipLabel>
    <relationshipName>Referred_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>