unpackaged/main/default/objects/Lead/fields/Referred_by_Name__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Name__c</fullName>
    <description>Who referred this lead - used in Refer a Friend (RAF) project. Name if brought back from the Web-to-Lead form entered by  the referring person.
Admin eyes only - doesnt need to be on the page layout.</description>
    <label>Referred by Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>