unpackaged/main/default/objects/Lead/fields/Refused_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Refused_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refused Insurance</label>
    <type>Checkbox</type>
</CustomField>