unpackaged/main/default/objects/Lead/fields/Secondary_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Occupation__c</fullName>
    <label>Secondary Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>