unpackaged/main/default/objects/Lead/fields/Spam__c.field-meta.xml
<CustomField>
    <fullName>Spam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used as a temporary fix to mark the incoming leads that are spam, so these can be excluded from the agents view. Updated using flow.</description>
    <label>Spam</label>
    <type>Checkbox</type>
</CustomField>