unpackaged/main/default/objects/Lead/fields/Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>Status_Updated__c</fullName>
    <description>Updated by the flow which will trigger everytime status field is updated and will capture that date in this field</description>
    <label>Status Updated</label>
    <type>DateTime</type>
</CustomField>