unpackaged/main/default/objects/Lead/fields/Time_in_Queue__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Queue__c</fullName>
    <inlineHelpText>How long this Lead was under the queue before being assigned to an agent. Time tracked in minutes</inlineHelpText>
    <label>Time in Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>