unpackaged/main/default/objects/Lead/fields/Tool__c.field-meta.xml
<CustomField>
    <fullName>Tool__c</fullName>
    <label>Tool</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>