unpackaged/main/default/objects/Lead/fields/Tools__c.field-meta.xml
<CustomField>
    <fullName>Tools__c</fullName>
    <description>Cover level required for Tools</description>
    <label>Tools</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>