unpackaged/main/default/objects/Lead/fields/Tools_Cover_Flag__c.field-meta.xml
<CustomField>
    <fullName>Tools_Cover_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tools Cover Flag</label>
    <type>Checkbox</type>
</CustomField>