unpackaged/main/default/objects/Lead/fields/Total_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Visits__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Update by flow to track how many times the same person visited our website and ran a quote</description>
    <inlineHelpText>How many times they visited the website?</inlineHelpText>
    <label>Total Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>