unpackaged/main/default/objects/Lead/fields/Vehicle_Count__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Count__c</fullName>
    <label>Vehicle Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>