unpackaged/main/default/objects/Lead/fields/Vehicle_Use__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Use__c</fullName>
    <label>Vehicle Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>