unpackaged/main/default/objects/Lead/fields/Weekday__c.field-meta.xml
<CustomField>
    <fullName>Weekday__c</fullName>
    <description>Calculates which day of the week lead was created</description>
    <formula>WEEKDAY( DATEVALUE( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>