unpackaged/main/default/objects/Lead/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>