unpackaged/main/default/objects/Lead/fields/Years_in_Trade2__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Trade2__c</fullName>
    <description>Populated via integration from online journey</description>
    <label>Years in Trade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-1</fullName>
            </value>
            <value>
                <fullName>1-2</fullName>
            </value>
            <value>
                <fullName>2-3</fullName>
            </value>
            <value>
                <fullName>3-4</fullName>
            </value>
            <value>
                <fullName>4-5</fullName>
            </value>
            <value>
                <fullName>5+</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
            <value>
                <fullName>20+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>