unpackaged/main/default/objects/Lead/recordTypes/Semi_Qualified.recordType-meta.xml
<RecordType>
    <fullName>Semi_Qualified</fullName>
    <active>true</active>
    <businessProcess>Qualified</businessProcess>
    <description>Qualified lead process.</description>
    <label>Qualified</label>
</RecordType>