unpackaged/main/default/objects/Lead/recordTypes/Unqualified.recordType-meta.xml
<RecordType>
    <fullName>Unqualified</fullName>
    <active>true</active>
    <businessProcess>Unqualified</businessProcess>
    <description>Unqualified lead process.</description>
    <label>Unqualified</label>
</RecordType>