unpackaged/main/default/objects/Lead/listViews/All_Closed_Leads.listView-meta.xml
<ListView>
    <fullName>All_Closed_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Package_Type__c</columns>
    <columns>Cover_Level__c</columns>
    <columns>Trade__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Closed Leads</label>
</ListView>