unpackaged/main/default/objects/Lead/listViews/All_Leads.listView-meta.xml
<ListView>
    <fullName>All_Leads</fullName>
    <columns>Lead_Priority__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Postcode__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Cover_Level__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Policy_Type__c</columns>
    <columns>Quote_Number__c</columns>
    <columns>Email_Opt_In__c</columns>
    <columns>Vehicle_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leads</label>
</ListView>