unpackaged/main/default/objects/Lead/listViews/All_Open_Semi_Qualified_Leads.listView-meta.xml
<ListView>
    <fullName>All_Open_Semi_Qualified_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Trade__c</columns>
    <columns>Policy_Type__c</columns>
    <columns>Quoted_Price__c</columns>
    <columns>Age2__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified,Sale Complete,Converted,Not Converted</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Semi_Qualified</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>Qualified Leads Queue</value>
    </filters>
    <label>All Open Qualified Leads</label>
</ListView>