unpackaged/main/default/objects/Lead/listViews/All_Open_Unqualified_Leads.listView-meta.xml
<ListView>
    <fullName>All_Open_Unqualified_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Trade__c</columns>
    <columns>Policy_Type__c</columns>
    <columns>Quoted_Price__c</columns>
    <columns>Age2__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified,Sale Complete,Converted,Closed - Not Converted</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Unqualified</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>Unqualified Leads Queue</value>
    </filters>
    <filters>
        <field>Spam__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>3/11/2024 12:00 AM</value>
    </filters>
    <label>All Open Unqualified Leads</label>
</ListView>