unpackaged/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Postcode__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Cover__c</columns>
    <columns>Cover_Level__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Quoted_Price__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Sale Complete,Closed - Not Converted,Converted</value>
    </filters>
    <filters>
        <field>Spam__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>All Open Leads</label>
</ListView>