unpackaged/main/default/objects/Lead/listViews/Broker_Leads.listView-meta.xml
<ListView>
    <fullName>Broker_Leads</fullName>
    <columns>Lead_Priority__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Trade__c</columns>
    <columns>Policy_Type__c</columns>
    <columns>Quoted_Price__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Quote_Type__c</columns>
    <columns>Vehicle_Count__c</columns>
    <columns>Total_Repeat_Visits__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Spam__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:5</value>
    </filters>
    <filters>
        <field>Policy_Type__c</field>
        <operation>equals</operation>
        <value>Liability</value>
    </filters>
    <label>Broker Leads</label>
</ListView>