unpackaged/main/default/objects/Lead/listViews/Dialler_Leads.listView-meta.xml
<ListView>
    <fullName>Dialler_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Quoted_Price__c</columns>
    <columns>Outbound_Dialler_Calls__c</columns>
    <columns>OP_OutboundCallAttempt__c</columns>
    <columns>OP_OutboundCallDate__c</columns>
    <columns>OP_OutboundLeadPriority__c</columns>
    <columns>Lead_Outcome2__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>OP_OutboundPhone__c</columns>
    <columns>Policy_Type__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Last_Modified_Time__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OP_OutboundLeadPriority__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>OP_OutboundPhone__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Converted,Closed - Not Converted</value>
    </filters>
    <filters>
        <field>Duplicate__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2026 12:00 AM</value>
    </filters>
    <filters>
        <field>Lead_Outcome2__c</field>
        <operation>notEqual</operation>
        <value>Callback arranged</value>
    </filters>
    <filters>
        <field>OP_OutboundCallDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Dialler Leads</label>
</ListView>