unpackaged/main/default/objects/Lead/listViews/EB_All_Leads_Last_3_days_P4s.listView-meta.xml
<ListView>
    <fullName>EB_All_Leads_Last_3_days_P4s</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Postcode__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Quoted_Price__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Policy_Type__c</columns>
    <columns>Reason_for_Cover__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Trade__c</columns>
    <columns>Outbound_Calls__c</columns>
    <columns>Inbound_Calls__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:3</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Nurturing</value>
    </filters>
    <filters>
        <field>Trade__c</field>
        <operation>contains</operation>
        <value>Builder,Plumber,Carpenter,Plastering,Painting,Property Maintenance,Building Maintenance</value>
    </filters>
    <filters>
        <field>Outbound_Calls__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>LEAD.PHONE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>qualified,unqualified</value>
    </filters>
    <label>All Leads - Last 3 days (P4s)</label>
</ListView>