unpackaged/main/default/objects/Lead/listViews/Manual_Leads_to_call.listView-meta.xml
<ListView>
    <fullName>Manual_Leads_to_call</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Quoted_Price__c</columns>
    <columns>Trade__c</columns>
    <columns>Lead_Outcome2__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Policy_Type__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Last_Modified_Time__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Converted,Closed - Not Converted</value>
    </filters>
    <filters>
        <field>Duplicate__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:5</value>
    </filters>
    <filters>
        <field>Lead_Outcome2__c</field>
        <operation>notEqual</operation>
        <value>Callback arranged</value>
    </filters>
    <filters>
        <field>OP_OutboundCallDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Quote_Type__c</field>
        <operation>equals</operation>
        <value>Full Quote</value>
    </filters>
    <filters>
        <field>OP_OutboundLeadPriority__c</field>
        <operation>equals</operation>
    </filters>
    <label>Manual Leads to call</label>
</ListView>