unpackaged/main/default/objects/Lead/listViews/Open_Leads_Within_7_days.listView-meta.xml
<ListView>
    <fullName>Open_Leads_Within_7_days</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Postcode__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Policy_Type__c</columns>
    <columns>Cover__c</columns>
    <columns>Cover_Level__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>New,Qualified,Sale Complete,Converted,Closed - Not Converted</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>LEAD.PHONE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>LEAD.PHONE</field>
        <operation>startsWith</operation>
        <value>07,+44</value>
    </filters>
    <filters>
        <field>LEAD.PHONE</field>
        <operation>notContain</operation>
        <value>07761 624585</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>Test</value>
    </filters>
    <filters>
        <field>Policy_Type__c</field>
        <operation>equals</operation>
        <value>AB Liability,Liability</value>
    </filters>
    <filters>
        <field>Spam__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Open Leads Within 7 days (Full Quotes)</label>
</ListView>